# apriltags3_ros

./: .gitignore  README.md
apriltags/: CMakeLists.txt  package.xml
apriltags3_ros/: CMakeLists.txt  nodelet_plugins.xml  package.xml
apriltags3_ros/config/: settings.yaml  tags.yaml
apriltags3_ros/include/apriltags3_ros/: common_functions.h  continuous_detector.h  single_image_detector.h
apriltags3_ros/launch/: continuous_detection.launch  single_image_client.launch  single_image_server.launch
apriltags3_ros/msg/: AprilTagDetection.msg
apriltags3_ros/scripts/: analyze_image.sh  calibrate_bundle.m
apriltags3_ros/src/: apriltags3_ros_continuous_node.cpp  apriltags3_ros_single_image_client_node.cpp  apriltags3_ros_single_image_server_node.cpp  common_functions.cpp  continuous_detector.cpp  single_image_detector.cpp
apriltags3_ros/srv/: AnalyzeSingleImage.srv
